Neubot 0.4.13 [2012-08-27]
	* utils_ctl.py: implement verbose
	* Implement MacOS browser
	* main_macos.py: implement main for MacOS
	* neubot/updater/unix.py: fix typo
	* neubot/log.py: adjust copyright assignment
	* neubot/log.py: new class StreamLogger
	* neubot/runner_api.py: use STREAM_LOG.start_streaming
	* regress/neubot/runner_api.py: use STREAM_LOG.start_streaming
	* neubot/runner_core.py: use STREAM_LOG.stop_streaming
	* neubot/log.py: log_tuple() renamed to log()
	* Change LOG.info() to logging.info()
	* Change LOG.debug() to logging.debug()
	* Change LOG.error() to logging.error()
	* Change LOG.warning() to logging.warning()
	* regress/neubot/log.py: purge deprecated calls
	* neubot/log.py: purge unused methods in Logger
	* Purge LOG.verbose()
	* Purge LOG.noisy
	* neubot/log.py: purge noisy, verbose, quiet
	* Forward port to StreamLogger of commit 3ac425cac4
	* neubot/log.py: call log() with exc_info argument in log_access()
	* neubot/updater/unix.py: autoupdater can handle channel change
	* FAQ-it.rst edited in 2.2 entry to reflect english FAQ
	* FAQ-it.rst added FreeBSD installation entry
	* Merge branches 'next-logger-cleanup' and 'pu' into next
	* runner_core.py: dispose of unused import
	* add Win32/openssl.exe: OpenSSL 1.0.1c compiled with MinGW
	* Win32/setup.py: distribute also openssl.exe
	* add Win32/LICENSE.OpenSSL.txt: add a copy of OpenSSL license
	* Move utils/__init__.py -> utils.py
	* neubot/log.py: create 'access' logger
	* neubot/log.py: test 'access' logger
	* neubot/http/server.py: use 'access' logger
	* neubot/log.py: Logger.oops() is now a module function
	* neubot/log.py: purge Logger.exception()
	* updater_runner updater_utils: channel -> system
	* Win32 updater: allow to specify channel
	* neubot/config.py: add 'win32_updater_channel' to CONFIG
	* neubot/background_win32.py: use CONFIG['win32_updater_channel']
	* neubot/updater_runner.py: use CONFIG['win32_updater_channel']