@@ -1,6 +1,6 @@
 .\" Man page generated from reStructeredText.
 .
-.TH NEUBOT 1 "2012-07-19" "Neubot 0.4.13" "Neubot manual"
+.TH NEUBOT 1 "2012-07-19" "Neubot 0.4.14" "Neubot manual"
 .SH NAME
 neubot \- The network neutrality bot
 .
