@@ -158,7 +158,7 @@ class BitTorrentClient(ClientHTTP):
             "download_speed": download_speed,
 
             # OS and version info
-            "neubot_version": utils_version.to_numeric("0.4.13"),
+            "neubot_version": utils_version.to_numeric("0.4.14"),
             "platform": sys.platform,
 
             # Test version (added Neubot 0.4.12)
