@@ -123,7 +123,7 @@ def main(args):
         sys.exit(0)
 
     if subcommand == '-V':
-        sys.stdout.write('Neubot 0.4.13\n')
+        sys.stdout.write('Neubot 0.4.14\n')
         sys.exit(0)
 
     if subcommand == 'start':
