@@ -67,7 +67,7 @@ class RunnerDload(ClientHTTP):
         ''' Invoked when the connection is ready '''
         request = Message()
         request.compose(method='GET', uri=self.ctx['uri'], keepalive=False)
-        request['user-agent'] = 'Neubot/0.4.13'
+        request['user-agent'] = 'Neubot/0.4.14'
         stream.send_request(request)
 
     def got_response(self, stream, request, response):
