@@ -72,7 +72,7 @@ VERSIONDIR = os.path.dirname(os.path.dirname(os.path.dirname(
 BASEDIR = os.path.dirname(VERSIONDIR)
 
 # Version number in numeric representation
-VERSION = "0.004013999"
+VERSION = "0.004014999"
 
 # Configuration
 CONFIG = {
@@ -436,7 +436,7 @@ def __download(address, rpath, tofile=False, https=False, maxbytes=67108864):
                 connection = __lib_http.HTTPSConnection(address)
             else:
                 connection = __lib_http.HTTPConnection(address)
-            headers = {'User-Agent': 'Neubot/0.4.13'}
+            headers = {'User-Agent': 'Neubot/0.4.14'}
             connection.request("GET", rpath, None, headers)
 
             # Recv HTTP response
