@@ -126,7 +126,7 @@ class UpdaterRunner(object):
             self._schedule()
             return
 
-        logging.info('updater_runner: %s -> %s', '0.004013999', vinfo)
+        logging.info('updater_runner: %s -> %s', '0.004014999', vinfo)
         self.retrieve_files(vinfo)
 
     def retrieve_files(self, vinfo):
