@@ -73,7 +73,7 @@ class WebkitGUI(gtk.Window):
         if ICON:
             self.set_icon_from_file(ICON)
 
-        self.set_title('Neubot 0.4.13')
+        self.set_title('Neubot 0.4.14')
         self.connect('destroy', gtk.main_quit)
         self.maximize()
         self._open_web_page(uri)
